# swaggerDoc.json
@@ -324,12 +324,12 @@
         }
       }
     },
-    "/api/v1/resume/{id}": {
+    "/api/v1/resume/download/{resumeId}": {
       "get": {
         "description": "",
         "parameters": [
           {
-            "name": "id",
+            "name": "resumeId",
             "in": "path",
             "required": true,
             "type": "string"
@@ -341,6 +341,9 @@
           },
           "404": {
             "description": "Not Found"
+          },
+          "500": {
+            "description": "Internal Server Error"
           }
         }
       }
